tests/bad/struct_redef.ae
/// fail: Name Foo already exists in scope

struct Foo {
    a: i32
}

struct Foo {
    b: bool
}